[project]
name = "loveable-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2.14",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langsmith[claude-agent-sdk]>=0.7.5",
    "openai>=2.21.0",
    "pathlib>=1.0.1",
    "prompts>=0.0.1",
]
